plugins {
    id 'org.springframework.boot' version '3.5.14' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.spatra.gt5lt7'
    version = '0.0.1-SNAPSHOT'
}

subprojects {
    if (file("src").exists()) {
        apply plugin: 'java'
        apply plugin: 'io.spring.dependency-management'

        java {
            toolchain {
                languageVersion = JavaLanguageVersion.of(17)
            }
        }

        repositories {
            mavenCentral()
        }

        ext {
            set('springCloudVersion', "2025.0.2")
        }

        dependencyManagement {
            imports {
                mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
            }
        }

        dependencies {
            compileOnly 'org.projectlombok:lombok'
            annotationProcessor 'org.projectlombok:lombok'
            testCompileOnly 'org.projectlombok:lombok'
            testAnnotationProcessor 'org.projectlombok:lombok'
        }

        tasks.named('test') {
            useJUnitPlatform()
        }
    }
}